tests/positive/channel_pingpong.safe
-- Test: channel_pingpong
-- Description: Two-task ping-pong via channels.
--   Two tasks exchange messages over two bounded channels. Each task
--   sends on one channel and receives on the other, forming a ping-pong.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.1.p2:78f022f7
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p15:b5b29b0e
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p27:ef0ce6bd
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p28:ea6bd13c
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p20:8aa1a21e
-- Expected: ACCEPT

package Ping_Pong

   type Message is range 0 to 1000;

   --  Two channels, each with capacity 1 (bounded FIFO).
   channel Ping_Ch : Message capacity 1;
   channel Pong_Ch : Message capacity 1;

   --  Ping_Task: background task used to keep task emission in the proof corpus.
   task Ping_Task with Priority = 10
      Reply : Message;

      loop
         send Ping_Ch, 7;
         receive Pong_Ch, Reply;
         if Reply > 0
            delay 0.001;
         else
            delay 0.001;

         delay 0.001;



   --  Pong_Task: background task used to keep multiple task bodies in the proof corpus.
   task Pong_Task with Priority = 10
      Received : Message;

      loop
         receive Ping_Ch, Received;
         send Pong_Ch, Received;
         delay 0.001;




